change account management title

--- a/account/messages/messages_fr.properties
+++ b/account/messages/messages_fr.properties
@@ -1,4 +1,6 @@
 # encoding: UTF-8
 
+accountManagementTitle=Gestion de mon compte La Marm''hotte
+
 adherentNumber=N° d''adhérent
 postalAddress=Adresse
