--- a/account/messages/messages_en.properties
+++ b/account/messages/messages_en.properties
@@ -1,4 +1,6 @@
 # encoding: UTF-8
 
+accountManagementTitle=Management of my La Marm''hotte account
+
 adherentNumber=Adherent #
 postalAddress=Address
