add phone number to account management

--- a/account/messages/messages_fr.properties
+++ b/account/messages/messages_fr.properties
@@ -4,3 +4,4 @@ accountManagementTitle=Gestion de mon compte La Marm''hotte
 
 adherentNumber=N° d''adhérent
 postalAddress=Adresse
+telephoneNumber=Téléphone
