--- a/account/messages/messages_en.properties
+++ b/account/messages/messages_en.properties
@@ -4,3 +4,4 @@ accountManagementTitle=Management of my La Marm''hotte account
 
 adherentNumber=Adherent #
 postalAddress=Address
+telephoneNumber=Phone
