--- a/account/messages/messages_fr.properties
+++ b/account/messages/messages_fr.properties
@@ -5,3 +5,4 @@ accountManagementTitle=Gestion de mon compte La Marm''hotte
 adherentNumber=N° d''adhérent
 postalAddress=Adresse
 telephoneNumber=Téléphone
+membershipDate=Dernière date d''adhésion
