--- a/admin/messages/admin-messages_fr.properties
+++ b/admin/messages/admin-messages_fr.properties
@@ -156,7 +156,16 @@ set-to-now=Mettre à maintenant
 push=Appuyer
 push.tooltip=Pour tous les clients ayant une URL d'administration, les notifier de la politique de révocation.
 
-
+users=Utilisateurs
+groups=Groupes
+search.placeholder=Rechercher...
+users.instruction=Veuillez saisir une recherche, ou cliquer sur voir tous les utilisateurs
+edit=Modifier
+delete=Supprimer
+impersonate=Imiter
+add-user=Ajouter un utilisateur
+view-all-users=Voir tous les utilisateurs
+unlock-users=Dévérouiller les utilisateurs
 created-at=Créé à
 email=Courriel
 first-name=Prénom
