admin form to edit/add users

--- a/admin/messages/admin-messages_fr.properties
+++ b/admin/messages/admin-messages_fr.properties
@@ -1,6 +1,6 @@
 # encoding: UTF-8
 
-consoleTitle=Console d'administration de La marm'hotte
+consoleTitle=Console administration de La marmhotte
 
 # Common messages
 enabled=Actif
@@ -171,6 +171,9 @@ email=Courriel
 first-name=Prénom
 last-name=Nom
 adherentNumber=N° d'adhérent
+postalAddress=Adresse
+telephoneNumber=N° de téléphone
+membershipDate=Date d'adhésion
 user-enabled=Utilisateur activé
 user-enabled.tooltip=Un utilisateur désactivé ne peut pas se connecter
 email-verified=Courriel vérifié
