rename keycloak admin console

--- a/admin/messages/admin-messages_fr.properties
+++ b/admin/messages/admin-messages_fr.properties
@@ -1,6 +1,6 @@
 # encoding: UTF-8
 
-consoleTitle=Console administration de La marmhotte
+consoleTitle=Console de gestion des membres
 
 # Common messages
 enabled=Actif
