selection of co-adherent

--- a/admin/messages/admin-messages_fr.properties
+++ b/admin/messages/admin-messages_fr.properties
@@ -181,3 +181,46 @@ email-verified.tooltip=L'adresse de courriel de l'utilisateur a-t-elle été vé
 required-user-actions=Actions utilisateur requises
 required-user-actions.tooltip=Requiers une action quand l'utilisateur se connecte. 'Verify email' envoie un courriel à l'utilisateur pour vérifier son adresse. 'Update profile' demande à l'utilisateur de mettre à jour ses informations. 'Update password' demande à l'utilisateur de modifier son mot de passe. 'Configure OTP' demande à l'utilisateur de configurer un générateur de mot de passe sur son téléphone.
 locale=Langue
+coAdherent=Co-adhérent
+
+view-all-groups=Voir tous les groupes
+default-groups=Groupes par défaut
+groups.default-groups.tooltip=Ensemble de groupes que les nouveaux utlisateurs rejoindront automatiquement.
+settings=Paramètres
+attributes=Attributs
+role-mappings=Correspondance des rôles
+members=Membres
+no-group-members=Personne dans ce groupe
+first-page=Première page
+previous-page=Page précédente
+next-page=Page suivante
+key=Clef
+value=Valeur
+new=Nouveau
+cut=Couper
+paste=Coller
+lookup=Chercher
+details=Détails
+credentials=Identifiants
+consents=Consentements
+sessions=Sessions
+federation-link=Lié à la fédération
+user-link.tooltip=Cet utilisateur a été importé depuis une base de données externe
+impersonate-user=Imiter l'utilisateur
+supported-user-storage-credential-types=Types supportés pour le stockage des identifiants de l'utilisateur
+provided-by=Fourni par
+manage-credentials=Gérer les identifiants
+manage-credentials.tooltip=Identifiants non fournis par une base de données externe.
+reset-password=Réinitialiser le mot de passe
+set-password=Définir le mot de passe
+password-confirmation=Confirmation du mot de passe
+temporary=Temporaire
+credentials.temporary.tooltip=Si activé, l'utilisateur doit changer de mot de passe à sa prochaine connexion.
+credential-reset-actions=Réinitialiser les identifiants
+reset-actions=Actions de réinitialisation
+credential-reset-actions-timeout=Expire dans
+credential-reset-actions-timeout.tooltip=Durée maximale avant que l'action permise n'expire.
+reset-actions-email=Courriel de réinitialisation
+credentials.reset-actions-email.tooltip=Envoi un courriel à l'utilisateur contenant un lien. Cliquer sur ce lien permet à l'utilisateur de réaliser l'action choisie sans avoir besoin de se connecter en premier lieu. Par exemple, choisissez l'action de mettre à jour le mot de passe puis cliquez sur ce bouton. L'utilisateur pourra alors changer son mot de passe sans avoir à se connecter.
+
+co-adh-selector=Sélectionnez un co-adhérent
