--- a/admin/messages/admin-messages_fr.properties
+++ b/admin/messages/admin-messages_fr.properties
@@ -182,6 +182,7 @@ required-user-actions=Actions utilisateur requises
 required-user-actions.tooltip=Requiers une action quand l'utilisateur se connecte. 'Verify email' envoie un courriel à l'utilisateur pour vérifier son adresse. 'Update profile' demande à l'utilisateur de mettre à jour ses informations. 'Update password' demande à l'utilisateur de modifier son mot de passe. 'Configure OTP' demande à l'utilisateur de configurer un générateur de mot de passe sur son téléphone.
 locale=Langue
 coAdherent=Co-adhérent
+co-adhrent.tooltip=Si vous êtes dans la fiche de l'adhérent principal, sélectionnez son co-adhérent. Attention le co-adhérent doit être créé avant l'adhérent et assigné au groupe "co-adherent".
 
 view-all-groups=Voir tous les groupes
 default-groups=Groupes par défaut
