translate group management

--- a/admin/messages/admin-messages_fr.properties
+++ b/admin/messages/admin-messages_fr.properties
@@ -223,5 +223,11 @@ credential-reset-actions-timeout=Expire dans
 credential-reset-actions-timeout.tooltip=Durée maximale avant que l'action permise n'expire.
 reset-actions-email=Courriel de réinitialisation
 credentials.reset-actions-email.tooltip=Envoi un courriel à l'utilisateur contenant un lien. Cliquer sur ce lien permet à l'utilisateur de réaliser l'action choisie sans avoir besoin de se connecter en premier lieu. Par exemple, choisissez l'action de mettre à jour le mot de passe puis cliquez sur ce bouton. L'utilisateur pourra alors changer son mot de passe sans avoir à se connecter.
+group-membership=Appartenance aux groupes
+leave=Quitter
+available-groups=Groupes disponibles
+join=Rejoindre
+group-membership.tooltip=Groupes dont l'utilisateur fait partie. Pour l'enlever d'un groupe, sélectionnez-le puis cliquez sur Quitter.
+membership.available-groups.tooltip=Groupes que l'utilisateur peut rejoindre. Sélectionnez un groupe et cliquez sur Rejoindre.
 
 co-adh-selector=Sélectionnez un co-adhérent
