select a referent for a group

--- a/admin/messages/admin-messages_fr.properties
+++ b/admin/messages/admin-messages_fr.properties
@@ -231,3 +231,5 @@ group-membership.tooltip=Groupes dont l'utilisateur fait partie. Pour l'enlever 
 membership.available-groups.tooltip=Groupes que l'utilisateur peut rejoindre. Sélectionnez un groupe et cliquez sur Rejoindre.
 
 co-adh-selector=Sélectionnez un co-adhérent
+referent-selector=Sélectionnez le référent
+referent=Référent
