--- a/login/messages/messages_fr.properties
+++ b/login/messages/messages_fr.properties
@@ -1,3 +1,3 @@
 # encoding: UTF-8
 
-loginAccountTitle=Connectez-vous à votre compte
+loginAccountTitle=Connectez-vous à votre compte. - Si vous n'êtes pas adhérent, envoyez un email à contact@la-marmhotte.org
